# modern-python

./: LICENSE  README.md  noxfile.py  pyproject.toml
src/modern_python/: wikipedia.py
tests/: conftest.py  test_console.py  test_console.py~
