[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = ""
authors = ["Silvano Garnerone <silvano.garnerone@klarna.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/garner1/modern-python"
repository = "https://github.com/garner1/modern-python"
keywords = ["hypermodern"]

