[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = ""
authors = ["Silvano Garnerone <silvano.garnerone@klarna.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/garner1/modern-python"
repository = "https://github.com/garner1/modern-python"
keywords = ["hypermodern"]

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100